# tfl-training-intro-to-agentic-ai

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
slides/: README.md  examples.md  main.md  package-lock.json  package.json  uno.config.ts
slides/sections/agenda/: slides.md
slides/sections/backup/: slides.md
slides/sections/backup/agent_employment/: slides.md
slides/sections/backup/system_architecture/: slides.md
slides/sections/closing/: slides.md
slides/sections/intro_agentic_systems/: slides.md
slides/sections/introduction/: slides.md
slides/sections/memory/: slides.md
slides/sections/orchestration/: slides.md
slides/sections/react_agent/: slides.md
slides/sections/tools/: slides.md
slides/setup/: shiki.ts
slides/theme/components/: Box.vue  Grid.vue  Imgx.vue  ProgressBar.vue  Vspace.vue  field.vue
slides/theme/components/Prompt/: Prompt.vue
slides/theme/layouts/: Section.vue  cover.vue  default.vue  twocols.vue
slides/theme/styles/: styles.css
src/: agent.py
src/agents/: NOTES.md  TASK_react_agent.py  TASK_tool_agent_with_memory.py  plan_and_execute_agent.py  react_agent.py  text_extraction_agent.py  tool_agent.py  tool_agent_with_memory.py
src/agents/charts/: flowchart_plan_and_execute.mmd  flowchart_reasoning_and_acting.mmd
src/clients/: llm_client.py  mcp_client.py
src/config/: mcp_config.py  model_config.py  prompts.py
src/tools/: TASK.md  __init__.py  weather_tools.py
src/tools/finance_tools/: README.md  finance_utils.py  yahoo_finance.py
(+27 files in other folders)
